--- a/AplicativoFit/AplicativoFit/Views/CadastroAtividade.xaml
+++ b/AplicativoFit/AplicativoFit/Views/CadastroAtividade.xaml
@@ -2,11 +2,26 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AplicativoFit.Views.CadastroAtividade">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="+"/>
+        <ToolbarItem Text="Salvar" IconImageSource="salvar"/>
+    </ContentPage.ToolbarItems>
+    
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        <StackLayout Padding="10">
+            <Label Text="Id"/>
+            
+            <Label Text="Descrição:"/>
+            <Entry Placeholder="Como foi sua Atividade?"/>
+
+            <Label Text="Data:"/>
+            <DatePicker Format="dd/MM/yyyy"/>
+
+            <Label Text="Peso:"/>
+            <Entry Keyboard="Numeric" Placeholder="Quanto você estava pesando?"/>
+
+            <Label Text="Observações:"/>
+            <Entry Placeholder="Algo para lembrar mais tarde?"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
