--- a/AplicativoFit/AplicativoFit/Views/CadastroAtividade.xaml
+++ b/AplicativoFit/AplicativoFit/Views/CadastroAtividade.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:AplicativoFit.Renderers"
              x:Class="AplicativoFit.Views.CadastroAtividade">
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="+" Command="{Binding NovaAtividade}"/>
@@ -22,6 +22,9 @@
 
             <Label Text="Observações:"/>
             <Entry Placeholder="Algo para lembrar mais tarde?" Text="{Binding Observacoes}"/>
+
+            <Label Text="entry personalizado"/>
+            <local:EntryRender Placeholder="Inserir Texto"></local:EntryRender>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
