--- a/AplicativoFit/AplicativoFit/Views/ListaAtividades.xaml
+++ b/AplicativoFit/AplicativoFit/Views/ListaAtividades.xaml
@@ -11,16 +11,16 @@
         <StackLayout>
             <StackLayout Orientation="Horizontal">
                 <SearchBar Placeholder="Busque por Descrição" Text="{Binding ParametroBusca}"/>
-                <Button Text="Buscar" Command="{Binding Buscar}"/>
+                <Button Text="Buscar" Command="{Binding Buscar}" BackgroundColor="#0096C7" Margin="5" Padding="10" TextColor="White"/>
             </StackLayout>
             
             <RefreshView IsRefreshing="{Binding EstaAtualizando, Mode=OneWay}"  Command="{Binding AtualizarLista}">
                 <ListView ItemsSource="{Binding ListaAtividades}">
                     <ListView.Header>
                         <Grid RowDefinitions="Auto" ColumnDefinitions="*,*,*">
-                            <Label Grid.Row="0" Grid.Column="0" Text="Id"/>
-                            <Label Grid.Row="0" Grid.Column="1" Text="Descrição"/>
-                            <Label Grid.Row="0" Grid.Column="2" Text="Data"/>
+                            <Label Grid.Row="0" Grid.Column="0" Text="Id" Padding="10" FontSize="Title" FontAttributes="Bold"/>
+                            <Label Grid.Row="0" Grid.Column="1" Text="Descrição" FontSize="Title" FontAttributes="Bold"/>
+                            <Label Grid.Row="0" Grid.Column="2" Text="Data" FontSize="Title" FontAttributes="Bold"/>
                         </Grid>
                     </ListView.Header>
                     <ListView.ItemTemplate>
@@ -33,9 +33,9 @@
                                               CommandParameter="{Binding Id}"/>
                                 </ViewCell.ContextActions>
                                 <Grid RowDefinitions="Auto" ColumnDefinitions="*,*,*">
-                                    <Label Grid.Row="0" Grid.Column="0" Text="{Binding Id}"/>
-                                    <Label Grid.Row="0" Grid.Column="1" Text="{Binding Descricao}"/>
-                                    <Label Grid.Row="0" Grid.Column="2" Text="{Binding Data, StringFormat='{}{0:dd/MM/yyyy}'}"/>
+                                    <Label Grid.Row="0" Grid.Column="0" Text="{Binding Id}" Padding="10" FontSize="Body"/>
+                                    <Label Grid.Row="0" Grid.Column="1" Text="{Binding Descricao}" FontSize="Body"/>
+                                    <Label Grid.Row="0" Grid.Column="2" Text="{Binding Data, StringFormat='{}{0:dd/MM/yyyy}'}" FontSize="Body"/>
                                 </Grid>
                             </ViewCell>
                         </DataTemplate>
